--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>FirstServlet</servlet-name>
-        <url-pattern>/hello-world</url-pattern>
+        <url-pattern>/test-servlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>FirstJsp</servlet-name>
+        <jsp-file>/firstJsp.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FirstJsp</servlet-name>
+        <url-pattern>/hello-world-jsp</url-pattern>
     </servlet-mapping>
 </web-app>
